# zkp-study

./: .gitignore  Groth16.ipynb  circuit.sym  docker-compose.yaml  dockerfile  plonk_snark.ipynb  r1cs.json  requirement.txt  witness.json  witness.wtns
Commitment/: FRI.ipynb  KZG.ipynb  QAP.ipynb
IOP/: plonk.ipynb
zkp-rust/constraints_lib/: Cargo.toml
zkp-rust/constraints_lib/src/: constants.rs
zkp-rust/constraints_lib/src/circuits/gadgets/: mod.rs  range_check.rs  set_membership_check.rs
zkp-rust/halo2_handson/: Cargo.toml
zkp-rust/halo2_handson/src/: main.rs
zkp-rust/halo2_handson/src/circuits/: arithmetic_circuits.rs  mod.rs
zkp-rust/id-check-main/: Cargo.toml
zkp-rust/id-check-main/src/: main.rs
zkp-rust/id_check/: Cargo.toml
zkp-rust/id_check/src/: lib.rs
zkp-rust/id_check/src/circuits/: access_control.rs  mod.rs
zkp-rust/id_check/src/circuits/gadgets/: age_check.rs  gender_check.rs  nationality_check.rs
zkp-rust/id_check_on_chip/: Cargo.toml
zkp-rust/id_check_on_chip/src/: constants.rs
zkp-rust/id_check_on_chip/src/circuits/: access_control.rs
zkp-rust/id_check_on_chip/src/circuits/gadgets/: age_check.rs  gender_check.rs  mod.rs  nationality_check.rs
zkp-rust/id_check_on_chip_lib/: Cargo.toml
zkp-rust/id_check_on_chip_lib/src/circuits/: access_control.rs
zkp-rust/id_check_on_chip_lib/src/circuits/gadgets/: age_check.rs  gender_check.rs  nationality_check.rs
zkp-rust/recursive-proof/: Cargo.toml
zkp-rust/recursive-proof/src/: main.rs
zkp-rust/recursive-proof/src/circuits/: add_chip.rs  mod.rs  recursive_proof_chip.rs
zkp-rust/zk_rollup_poc/: Cargo.toml
zkp-rust/zk_rollup_poc/src/: main.rs
zkp-rust/zk_rollup_poc_lib/: Cargo.toml
zkp-rust/zk_rollup_poc_lib/src/: constants.rs  lib.rs  utils.rs
zkp-rust/zk_rollup_poc_lib/src/circuits/: merkle_tree_chip.rs  mod.rs  poseidon_chip.rs  state_transition_circuit.rs  transaction.rs  transaction_chips.rs  zk_rollup_circuit.rs
zkp-rust/zkp_groth16/: Cargo.toml
zkp-rust/zkp_groth16/data/: input.json
zkp-rust/zkp_groth16/src/: KZG_Plonk.rs  groth16.rs  main.rs
zkp-rust/zkp_groth16/src/circom/: circuit.circom
